feat: initial version

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .navbar-item {
+    @apply m-2 p-3 bg-gray-700 rounded-full shadow-lg text-white hover:scale-110 hover:bg-gray-600 transition-all;
+  }
+
+  .vertical-spacer {
+    @apply bg-gray-600 border border-gray-600 rounded-full h-7 mx-3;
+  }
+}
